@@ -2,12 +2,15 @@ import java.util.ArrayList;
 
 public class DeckOfCards
 {
-    private final ArrayList<Card> deckOfCards;
+    private ArrayList<Card> deckOfCards, stack;
+    private static boolean endOfGame;
+    private static String headerText, contentText;
 
     /* Generates a random card deck of initial size 10. */
     public DeckOfCards()
     {
         deckOfCards = new ArrayList<>();
+        stack = new ArrayList<>();
         int initSize = 10;
 
         for (int i = 0; i < initSize; i++)
@@ -15,12 +18,11 @@ public class DeckOfCards
             Card card = new Card();
             deckOfCards.add(card);
         }
-
     }
 
     private Card getFirstCard()
     {
-        return this.deckOfCards.getFirst();
+        return this.deckOfCards.get(0);
     }
 
     /* Adds a card to the bottom of a given card deck. */
@@ -32,71 +34,64 @@ public class DeckOfCards
     /* Removes the first card from a deck and returns it. */
     private Card removeFirst()
     {
-        Card temp = this.deckOfCards.getFirst();
-        this.deckOfCards.removeFirst();
+        Card temp = this.deckOfCards.get(0);
+        this.deckOfCards.remove(0);
         return temp;
     }
-
-    private int getSize()
-    {
-        return this.deckOfCards.size();
-    }
-
 
     public void versus(DeckOfCards player2)
     {
         int result;
         Card temp1, temp2;
-
-        while (this.getSize() != 0 && player2.getSize() != 0)
+        
+        /* Compare a card from player 1 to a card from player 2. */
+        result = this.getFirstCard().compare(player2.getFirstCard());
+                
+        if (result == Card.player1takes)
         {
-            /* Prints the decks of each player after every iteration. */
-            System.out.println("Player 1 deck: ");
-            DeckOfCards.printDeck(this);
-            System.out.println("Player 2 deck: ");
-            DeckOfCards.printDeck(player2);
-
-            /* Compare a card from player 1 to a card from player 2. */
-            result = this.getFirstCard().compare(player2.getFirstCard());
-
-            if (result == Card.player1takes)
-            {
-                /* Takes the first card of player 1 and 2 and adds it to player 1 card deck. */
-                temp1 = this.removeFirst();
-                temp2 = player2.removeFirst();
-
-                this.addCard(temp1);
-                this.addCard(temp2);
-            }
-            else if (result == Card.player2takes)
-            {
-                /* Takes the first card of player 1 and 2 and adds it to player 2 card deck. */
-                temp1 = this.removeFirst();
-                temp2 = player2.removeFirst();
-
-                player2.addCard(temp2);
-                player2.addCard(temp1);
-            }
-            else
-            {
-                /* Create stack 1 and 2 to hold the drawn cards of player 1 and 2 respectively. */
-                ArrayList<Card> stack1 = new ArrayList<>();
-                ArrayList<Card> stack2 = new ArrayList<>();
-                draw3(this, stack1, player2, stack2);
-            }
+            /* Takes the first card of player 1 and 2 and adds it to player 1 card deck. */
+            temp1 = this.removeFirst();
+            temp2 = player2.removeFirst();
+    
+            this.addCard(temp1);
+            this.addCard(temp2);
+                
+            this.addStack(this.getStack());
+            this.addStack(player2.getStack());
         }
-
+        else if (result == Card.player2takes)
+        {
+            /* Takes the first card of player 1 and 2 and adds it to player 2 card deck. */
+            temp1 = this.removeFirst();
+            temp2 = player2.removeFirst();
+    
+            player2.addCard(temp2);
+            player2.addCard(temp1);
+                
+            player2.addStack(player2.getStack());
+            player2.addStack(this.getStack());
+        }
+        else
+        {
+            /* Create stack 1 and 2 to hold the drawn cards of player 1 and 2 respectively. */
+            draw3(this, player2);
+        }
+            
         if (this.getSize() == 0)
         {
-            System.out.println("Player 2 wins!!!");
+            setHeaderText("Player 2 wins!!!");
+            setContentText("Click on new game to play again");
+            setEndOfGame(true);
         }
         if (player2.getSize() == 0)
         {
-            System.out.println("Player 1 wins!!!");
+            setHeaderText("Player 1 wins!!!");
+            setContentText("Click on new game to play again");
+            setEndOfGame(true);
         }
     }
 
-    private void draw3(DeckOfCards player1, ArrayList<Card> stack1, DeckOfCards player2, ArrayList<Card> stack2)
+    private void draw3(DeckOfCards player1, DeckOfCards player2)
     {
         int result;
         boolean flag;
@@ -105,47 +100,11 @@ public class DeckOfCards
         /* Draws 3 cards, including the card that has initiated the draw 3 state,
            from player 1 and add it to his stack. If player 1 had drawn all of his cards,
            then player 2 wins automatically and we return. */
-        flag = player1.draw3cards(stack1);
+        flag = player1.draw3cards(player1.getStack());
         if (flag) {return;}
 
-        flag = player2.draw3cards(stack2);
+        flag = player2.draw3cards(player2.getStack());
         if (flag) {return;}
-
-
-        /* Compares the third card, after the card that has initiated draw 3 state, of player 1 and 2. */
-        result = this.getFirstCard().compare(player2.getFirstCard());
-        if (result == Card.player1takes)
-        {
-            /* Takes the first card of player 1 and 2 and adds it to player 1 card deck.
-               Then, add the stacks of the drawn cards to player 1 card deck.             */
-            temp1 = player1.removeFirst();
-            temp2 = player2.removeFirst();
-
-            player1.addCard(temp1);
-            player1.addCard(temp2);
-
-            player1.addStack(stack1);
-            player1.addStack(stack2);
-        }
-        else if (result == Card.player2takes)
-        {
-            /* Takes the first card of player 1 and 2 and adds it to player 2 card deck.
-             *  Then, add the stacks of the drawn cards to player 2 card deck.             */
-            temp1 = player1.removeFirst();
-            temp2 = player2.removeFirst();
-
-            player2.addCard(temp2);
-            player2.addCard(temp1);
-
-            player2.addStack(stack2);
-            player2.addStack(stack1);
-        }
-        else
-        {
-            /* Repeat the cycle, with the same stacks as before. */
-            draw3(player1, stack1, player2, stack2);
-        }
-
     }
 
     /* Adds a stack of cards to the bottom of a given player card deck. */
@@ -153,8 +112,8 @@ public class DeckOfCards
     {
         while (!stack.isEmpty())
         {
-            this.addCard(stack.getFirst());
-            stack.removeFirst();
+            this.addCard(stack.get(0));
+            stack.remove(0);
         }
     }
 
@@ -179,11 +138,52 @@ public class DeckOfCards
             }
             counter++;
         }
-        if (this.getSize == 0)
+        if (this.getSize() == 0)
         {
             flag = true;
         }
+
         return flag;
+    }
+    
+    public static void setEndOfGame(boolean state)
+    {
+        endOfGame = state;
+    }
+    
+    public static boolean getEndOfGame()
+    {
+        return endOfGame;
+    }
+    
+    public static void setHeaderText(String text)
+    {
+        headerText = text;
+    }
+    
+    public static String getHeaderText()
+    {
+        return headerText;
+    }
+    
+    public static void setContentText(String text)
+    {
+        contentText = text;
+    }
+    
+    public static String getContentText()
+    {
+        return contentText;
+    }
+    
+    private int getSize()
+    {
+        return this.deckOfCards.size();
+    }
+    
+    private ArrayList<Card> getStack()
+    {
+        return this.stack;
     }
 
     public static void printDeck(DeckOfCards deck)
